[gd_scene load_steps=30 format=3 uid="uid://bxfl1kjsoew3p"]

[ext_resource type="Texture2D" uid="uid://csly3q0vbst7g" path="res://assets/watergrass.png" id="1_q3f0s"]
[ext_resource type="Texture2D" uid="uid://hyjap3r41la3" path="res://Animations/punch.png" id="2_167nu"]
[ext_resource type="Script" uid="uid://di5um566rox20" path="res://Scripts/HorseNPC.gd" id="2_iu8um"]
[ext_resource type="Texture2D" uid="uid://272e38v6ip62" path="res://Animations/idle.png" id="3_61thg"]
[ext_resource type="Script" uid="uid://bpuxbcav5baf3" path="res://Scripts/kangaroo.gd" id="5_cslyu"]
[ext_resource type="Texture2D" uid="uid://d2s1tnupw50e" path="res://Animations/defeated_horse.png" id="5_f54f7"]
[ext_resource type="Texture2D" uid="uid://bjgf041x7en2g" path="res://Animations/kangaroo attack.png" id="6_f54f7"]
[ext_resource type="Texture2D" uid="uid://dsaaqujrvyne6" path="res://Animations/Kangaroo Idle.png" id="7_voygt"]
[ext_resource type="PackedScene" uid="uid://dfxvfxqwdnh48" path="res://entities/player/player.tscn" id="9_f54f7"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_36ixs"]
texture = ExtResource("1_q3f0s")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0

[sub_resource type="TileSet" id="TileSet_167nu"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_36ixs")

[sub_resource type="AtlasTexture" id="AtlasTexture_2j41i"]
atlas = ExtResource("2_167nu")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_foxm7"]
atlas = ExtResource("2_167nu")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iu8um"]
atlas = ExtResource("2_167nu")
region = Rect2(64, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cslyu"]
atlas = ExtResource("3_61thg")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f54f7"]
atlas = ExtResource("3_61thg")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_voygt"]
atlas = ExtResource("5_f54f7")
region = Rect2(0, 0, 32, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_4a6df"]
atlas = ExtResource("5_f54f7")
region = Rect2(32, 0, 32, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xov4"]
atlas = ExtResource("5_f54f7")
region = Rect2(64, 0, 32, 38)

[sub_resource type="SpriteFrames" id="SpriteFrames_voygt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2j41i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_foxm7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iu8um")
}],
"loop": true,
"name": &"attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cslyu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f54f7")
}],
"loop": true,
"name": &"charge",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_voygt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4a6df")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xov4")
}],
"loop": false,
"name": &"death",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cslyu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f54f7")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cslyu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f54f7")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cslyu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f54f7")
}],
"loop": true,
"name": &"stunned",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iu8um"]
size = Vector2(28, 57)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cslyu"]
size = Vector2(50, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_udoh7"]
atlas = ExtResource("6_f54f7")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_poa5m"]
atlas = ExtResource("6_f54f7")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bvp0j"]
atlas = ExtResource("6_f54f7")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxc41"]
atlas = ExtResource("7_voygt")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3blc"]
atlas = ExtResource("7_voygt")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_4a6df"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_udoh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_poa5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bvp0j")
}],
"loop": true,
"name": &"attack",
"speed": 9.0
}, {
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxc41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3blc")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_4xov4"]
radius = 17.0

[node name="Node2D" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_167nu")
format = 2
layer_0/tile_data = PackedInt32Array(458752, 0, 4, 458753, 65536, 4, 458754, 65536, 4, 524290, 65536, 8, 524291, 65536, 8, 524292, 65536, 8, 524293, 65536, 8, 524294, 65536, 8, 524295, 65536, 8, 524296, 65536, 8, 458760, 65536, 4, 458761, 65536, 4, 458762, 65536, 4, 458763, 65536, 4, 458764, 65536, 4, 393228, 65536, 4, 393229, 65536, 4, 327693, 65536, 4, 262157, 65536, 4, 196621, 65536, 4, 131085, 65536, 4, 65549, 65536, 4, 13, 65536, 3, 4, 65536, 3, 327680, 0, 4, 393216, 0, 4, 393217, 65536, 4, 327681, 65536, 4, 262145, 65536, 4, 196609, 65536, 4, 131073, 65536, 4, 65537, 65536, 4, 1, 65536, 3, 2, 65536, 3, 65538, 65536, 4, 131074, 65536, 4, 196610, 65536, 4, 262146, 65536, 4, 327682, 65536, 4, 393218, 65536, 4, 393219, 65536, 4, 327683, 65536, 4, 262147, 65536, 4, 196611, 65536, 4, 131075, 65536, 4, 65539, 65536, 4, 3, 65536, 3, 65540, 65536, 4, 131076, 65536, 4, 196612, 65536, 4, 262148, 65536, 4, 327684, 65536, 4, 393220, 65536, 4, 458756, 65536, 4, 458755, 65536, 4, 458757, 65536, 4, 393221, 65536, 4, 327685, 65536, 4, 262149, 65536, 4, 196613, 65536, 4, 131077, 65536, 4, 65541, 65536, 4, 5, 65536, 3, 6, 65536, 3, 65542, 65536, 4, 131078, 65536, 4, 196614, 65536, 4, 262150, 65536, 4, 327686, 65536, 4, 393222, 65536, 4, 458758, 65536, 4, 458759, 65536, 4, 393223, 65536, 4, 327687, 65536, 4, 262151, 65536, 4, 196615, 65536, 4, 131079, 65536, 4, 65543, 65536, 4, 7, 65536, 3, 8, 65536, 3, 65544, 65536, 4, 131080, 65536, 4, 196616, 65536, 4, 262152, 65536, 4, 327688, 65536, 4, 393224, 65536, 4, 393225, 65536, 4, 327689, 65536, 4, 262153, 65536, 4, 196617, 65536, 4, 131081, 65536, 4, 65545, 65536, 4, 9, 65536, 3, 10, 65536, 3, 65546, 65536, 4, 131082, 65536, 4, 196618, 65536, 4, 262154, 65536, 4, 327690, 65536, 4, 393226, 65536, 4, 393227, 65536, 4, 327691, 65536, 4, 262155, 65536, 4, 196619, 65536, 4, 131083, 65536, 4, 65547, 65536, 4, 11, 65536, 3, 12, 65536, 3, 65548, 65536, 4, 131084, 65536, 4, 196620, 65536, 4, 262156, 65536, 4, 327692, 65536, 4, 524288, 0, 4, 524289, 65536, 8, 524297, 65536, 8, 524298, 65536, 8, 524299, 65536, 8, 524300, 65536, 8, 524301, 65536, 4, 458765, 65536, 4, 0, 0, 3, 65536, 0, 4, 131072, 0, 4, 196608, 0, 4, 262144, 0, 4, 589824, 0, 4, 655360, 0, 4, 720896, 0, 4, 786432, 0, 4, 851968, 0, 4, 917504, 0, 4, 983040, 0, 4, 1048576, 0, 4, 1114112, 0, 4, 1179648, 0, 4, 1245184, 0, 5, 1245185, 65536, 5, 1245186, 65536, 5, 1245187, 65536, 5, 1245188, 65536, 5, 1245189, 65536, 5, 1245190, 65536, 5, 1245191, 65536, 5, 1245192, 65536, 5, 1245193, 65536, 5, 1245194, 65536, 5, 1245195, 65536, 5, 1245196, 65536, 5, 1245197, 65536, 5, 1179661, 65536, 4, 1114125, 65536, 4, 1048589, 65536, 4, 983053, 65536, 4, 917517, 65536, 4, 851981, 65536, 4, 786445, 65536, 4, 720909, 65536, 4, 655373, 65536, 4, 589837, 65536, 4, 917513, 65536, 4, 851977, 65536, 4, 786441, 65536, 4, 720905, 65536, 4, 655369, 65536, 4, 589833, 65536, 4, 589832, 65536, 4, 589831, 65536, 4, 589830, 65536, 4, 589829, 65536, 4, 589828, 65536, 4, 589827, 65536, 4, 589826, 65536, 4, 589825, 65536, 4, 655361, 65536, 4, 720897, 65536, 4, 786433, 65536, 4, 851969, 65536, 4, 917505, 65536, 4, 983041, 65536, 4, 1048577, 65536, 4, 1114113, 65536, 4, 1179649, 65536, 4, 1179650, 65536, 4, 1114114, 65536, 4, 1048578, 65536, 4, 983042, 65536, 4, 917506, 65536, 4, 851970, 65536, 4, 786434, 65536, 4, 720898, 65536, 4, 655362, 65536, 4, 655363, 65536, 4, 720899, 65536, 4, 786435, 65536, 4, 851971, 65536, 4, 917507, 65536, 4, 983043, 65536, 4, 1048579, 65536, 4, 1114115, 65536, 4, 1179651, 65536, 4, 1179652, 65536, 4, 1114116, 65536, 4, 1048580, 65536, 4, 983044, 65536, 4, 917508, 65536, 4, 851972, 65536, 4, 786436, 65536, 4, 720900, 65536, 4, 655364, 65536, 4, 655365, 65536, 4, 720901, 65536, 4, 786437, 65536, 4, 851973, 65536, 4, 917509, 65536, 4, 983045, 65536, 4, 1048581, 65536, 4, 1114117, 65536, 4, 1179653, 65536, 4, 1179654, 65536, 4, 1114118, 65536, 4, 1048582, 65536, 4, 983046, 65536, 4, 917510, 65536, 4, 851974, 65536, 4, 786438, 65536, 4, 720902, 65536, 4, 655366, 65536, 4, 655367, 65536, 4, 720903, 65536, 4, 786439, 65536, 4, 851975, 65536, 4, 917511, 65536, 4, 983047, 65536, 4, 1048583, 65536, 4, 1114119, 65536, 4, 1179655, 65536, 4, 1179656, 65536, 4, 1114120, 65536, 4, 1048584, 65536, 4, 983048, 65536, 4, 917512, 65536, 4, 851976, 65536, 4, 786440, 65536, 4, 720904, 65536, 4, 655368, 65536, 4, 983049, 65536, 4, 1048585, 65536, 4, 1114121, 65536, 4, 1179657, 65536, 4, 1179658, 65536, 4, 1114122, 65536, 4, 1048586, 65536, 4, 983050, 65536, 4, 917514, 65536, 4, 851978, 65536, 4, 786442, 65536, 4, 720906, 65536, 4, 655370, 65536, 4, 589834, 65536, 4, 589835, 65536, 4, 655371, 65536, 4, 720907, 65536, 4, 786443, 65536, 4, 851979, 65536, 4, 917515, 65536, 4, 983051, 65536, 4, 1048587, 65536, 4, 1114123, 65536, 4, 1179659, 65536, 4, 1179660, 65536, 4, 1114124, 65536, 4, 1048588, 65536, 4, 983052, 65536, 4, 917516, 65536, 4, 851980, 65536, 4, 786444, 65536, 4, 720908, 65536, 4, 655372, 65536, 4, 589836, 65536, 4, 14, 65536, 3, 65550, 65536, 4, 131086, 65536, 4, 196622, 65536, 4, 262158, 65536, 4, 327694, 65536, 4, 393230, 65536, 4, 458766, 65536, 4, 524302, 65536, 4, 589838, 65536, 4, 655374, 65536, 4, 720910, 65536, 4, 786446, 65536, 4, 851982, 65536, 4, 917518, 65536, 4, 983054, 65536, 4, 1048590, 65536, 4, 1114126, 65536, 4, 1179662, 65536, 4, 1245198, 65536, 5, 15, 65536, 3, 65551, 65536, 4, 131087, 65536, 4, 196623, 65536, 4, 262159, 65536, 4, 327695, 65536, 4, 393231, 65536, 4, 458767, 65536, 4, 524303, 65536, 4, 589839, 65536, 4, 655375, 65536, 4, 720911, 65536, 4, 786447, 65536, 4, 851983, 65536, 4, 917519, 65536, 4, 983055, 65536, 4, 1048591, 65536, 4, 1114127, 65536, 4, 1179663, 65536, 4, 1245199, 65536, 5, 16, 65536, 4, 65552, 65536, 4, 131088, 65536, 4, 196624, 65536, 4, 262160, 65536, 4, 327696, 65536, 4, 393232, 65536, 4, 458768, 65536, 4, 524304, 65536, 4, 589840, 65536, 4, 655376, 65536, 4, 720912, 65536, 4, 786448, 65536, 4, 851984, 65536, 4, 917520, 65536, 4, 983056, 65536, 4, 1048592, 65536, 4, 1114128, 65536, 4, 1179664, 65536, 4, 1245200, 65536, 5, 17, 65536, 4, 65553, 65536, 4, 131089, 65536, 4, 196625, 65536, 4, 262161, 65536, 4, 327697, 65536, 4, 393233, 65536, 4, 458769, 65536, 4, 524305, 65536, 4, 589841, 65536, 4, 655377, 65536, 4, 720913, 65536, 4, 786449, 65536, 4, 851985, 65536, 4, 917521, 65536, 4, 983057, 65536, 4, 1048593, 65536, 4, 1114129, 65536, 4, 1179665, 65536, 4, 1245201, 65536, 5, 18, 65536, 4, 65554, 65536, 4, 131090, 65536, 4, 196626, 65536, 4, 262162, 65536, 4, 327698, 65536, 4, 393234, 65536, 4, 458770, 65536, 4, 524306, 65536, 4, 589842, 65536, 4, 655378, 65536, 4, 720914, 65536, 4, 786450, 65536, 4, 851986, 65536, 4, 917522, 65536, 4, 983058, 65536, 4, 1048594, 65536, 4, 1114130, 65536, 4, 1179666, 65536, 4, 1245202, 65536, 4, 19, 65536, 4, 65555, 65536, 4, 131091, 65536, 4, 196627, 65536, 4, 262163, 65536, 4, 327699, 65536, 4, 393235, 65536, 4, 458771, 65536, 4, 524307, 65536, 4, 589843, 65536, 4, 655379, 65536, 4, 720915, 65536, 4, 786451, 65536, 4, 851987, 65536, 4, 917523, 65536, 4, 983059, 65536, 4, 1048595, 65536, 4, 1114131, 65536, 4, 1179667, 65536, 4, 1245203, 65536, 4, 20, 65536, 4, 65556, 65536, 4, 131092, 65536, 4, 196628, 65536, 4, 262164, 65536, 4, 327700, 65536, 4, 393236, 65536, 4, 458772, 65536, 4, 524308, 65536, 4, 589844, 65536, 4, 655380, 65536, 4, 720916, 65536, 4, 786452, 65536, 4, 851988, 65536, 4, 917524, 65536, 4, 983060, 65536, 4, 1048596, 65536, 4, 1114132, 65536, 4, 1179668, 65536, 4, 1245204, 65536, 4, 21, 65536, 4, 65557, 65536, 4, 131093, 65536, 4, 196629, 65536, 4, 262165, 65536, 4, 327701, 65536, 4, 393237, 65536, 4, 458773, 65536, 4, 524309, 65536, 4, 589845, 65536, 4, 655381, 65536, 4, 720917, 65536, 4, 786453, 65536, 4, 851989, 65536, 4, 917525, 65536, 4, 983061, 65536, 4, 1048597, 65536, 4, 1114133, 65536, 4, 1179669, 65536, 4, 1245205, 65536, 4, 22, 65536, 4, 65558, 65536, 4, 131094, 65536, 4, 196630, 65536, 4, 262166, 65536, 4, 327702, 65536, 4, 393238, 65536, 4, 458774, 65536, 4, 524310, 65536, 4, 589846, 65536, 4, 655382, 65536, 4, 720918, 65536, 4, 786454, 65536, 4, 851990, 65536, 4, 917526, 65536, 4, 983062, 65536, 4, 1048598, 65536, 4, 1114134, 65536, 4, 1179670, 65536, 4, 1245206, 65536, 5, 23, 65536, 4, 65559, 65536, 4, 131095, 65536, 4, 196631, 65536, 4, 262167, 65536, 4, 327703, 65536, 4, 393239, 65536, 4, 458775, 65536, 4, 524311, 65536, 4, 589847, 65536, 4, 655383, 65536, 4, 720919, 65536, 4, 786455, 65536, 4, 851991, 65536, 4, 917527, 65536, 4, 983063, 65536, 4, 1048599, 65536, 4, 1114135, 65536, 4, 1179671, 65536, 4, 1245207, 65536, 5, 24, 65536, 3, 65560, 65536, 4, 131096, 65536, 4, 196632, 65536, 4, 262168, 65536, 4, 327704, 65536, 4, 393240, 65536, 4, 458776, 65536, 4, 524312, 65536, 4, 589848, 65536, 4, 655384, 65536, 4, 720920, 65536, 4, 786456, 65536, 4, 851992, 65536, 4, 917528, 65536, 4, 983064, 65536, 4, 1048600, 65536, 4, 1114136, 65536, 4, 1179672, 65536, 4, 1245208, 65536, 5, 25, 65536, 3, 65561, 65536, 4, 131097, 65536, 4, 196633, 65536, 4, 262169, 65536, 4, 327705, 65536, 4, 393241, 65536, 4, 458777, 65536, 4, 524313, 65536, 4, 589849, 65536, 4, 655385, 65536, 4, 720921, 65536, 4, 786457, 65536, 4, 851993, 65536, 4, 917529, 65536, 4, 983065, 65536, 4, 1048601, 65536, 4, 1114137, 65536, 4, 1179673, 65536, 4, 1245209, 65536, 5, 26, 65536, 3, 65562, 65536, 4, 131098, 65536, 4, 196634, 65536, 4, 262170, 65536, 4, 327706, 65536, 4, 393242, 65536, 4, 458778, 65536, 4, 524314, 65536, 4, 589850, 65536, 4, 655386, 65536, 4, 720922, 65536, 4, 786458, 65536, 4, 851994, 65536, 4, 917530, 65536, 4, 983066, 65536, 4, 1048602, 65536, 4, 1114138, 65536, 4, 1179674, 65536, 4, 1245210, 65536, 5, 27, 65536, 3, 65563, 65536, 4, 131099, 65536, 4, 196635, 65536, 4, 262171, 65536, 4, 327707, 65536, 4, 393243, 65536, 4, 458779, 65536, 4, 524315, 65536, 4, 589851, 65536, 4, 655387, 65536, 4, 720923, 65536, 4, 786459, 65536, 4, 851995, 65536, 4, 917531, 65536, 4, 983067, 65536, 4, 1048603, 65536, 4, 1114139, 65536, 4, 1179675, 65536, 4, 1245211, 65536, 5, 28, 65536, 3, 65564, 65536, 4, 131100, 65536, 4, 196636, 65536, 4, 262172, 65536, 4, 327708, 65536, 4, 393244, 65536, 4, 458780, 65536, 4, 524316, 65536, 4, 589852, 65536, 4, 655388, 65536, 4, 720924, 65536, 4, 786460, 65536, 4, 851996, 65536, 4, 917532, 65536, 4, 983068, 65536, 4, 1048604, 65536, 4, 1114140, 65536, 4, 1179676, 65536, 4, 1245212, 65536, 5, 29, 65536, 3, 65565, 65536, 4, 131101, 65536, 4, 196637, 65536, 4, 262173, 65536, 4, 327709, 65536, 4, 393245, 65536, 4, 458781, 65536, 4, 524317, 65536, 4, 589853, 65536, 4, 655389, 65536, 4, 720925, 65536, 4, 786461, 65536, 4, 851997, 65536, 4, 917533, 65536, 4, 983069, 65536, 4, 1048605, 65536, 4, 1114141, 65536, 4, 1179677, 65536, 4, 1245213, 65536, 5, 30, 65536, 3, 65566, 65536, 4, 131102, 65536, 4, 196638, 65536, 4, 262174, 65536, 4, 327710, 65536, 4, 393246, 65536, 4, 458782, 65536, 4, 524318, 65536, 4, 589854, 65536, 4, 655390, 65536, 4, 720926, 65536, 4, 786462, 65536, 4, 851998, 65536, 4, 917534, 65536, 4, 983070, 65536, 4, 1048606, 65536, 4, 1114142, 65536, 4, 1179678, 65536, 4, 1245214, 65536, 5, 31, 65536, 3, 65567, 65536, 4, 131103, 65536, 4, 196639, 65536, 4, 262175, 65536, 4, 327711, 65536, 4, 393247, 65536, 4, 458783, 65536, 4, 524319, 65536, 4, 589855, 65536, 4, 655391, 65536, 4, 720927, 65536, 4, 786463, 65536, 4, 851999, 65536, 4, 917535, 65536, 4, 983071, 65536, 4, 1048607, 65536, 4, 1114143, 65536, 4, 1179679, 65536, 4, 1245215, 65536, 5, 32, 65536, 3, 65568, 65536, 4, 131104, 65536, 4, 196640, 65536, 4, 262176, 65536, 4, 327712, 65536, 4, 393248, 65536, 4, 458784, 65536, 4, 524320, 65536, 4, 589856, 65536, 4, 655392, 65536, 4, 720928, 65536, 4, 786464, 65536, 4, 852000, 65536, 4, 917536, 65536, 4, 983072, 65536, 4, 1048608, 65536, 4, 1114144, 65536, 4, 1179680, 65536, 4, 1245216, 65536, 5, 33, 65536, 3, 65569, 65536, 4, 131105, 65536, 4, 196641, 65536, 4, 262177, 65536, 4, 327713, 65536, 4, 393249, 65536, 4, 458785, 65536, 4, 524321, 65536, 4, 589857, 65536, 4, 655393, 65536, 4, 720929, 65536, 4, 786465, 65536, 4, 852001, 65536, 4, 917537, 65536, 4, 983073, 65536, 4, 1048609, 65536, 4, 1114145, 65536, 4, 1179681, 65536, 4, 1245217, 65536, 5, 34, 65536, 3, 65570, 65536, 4, 131106, 65536, 4, 196642, 65536, 4, 262178, 65536, 4, 327714, 65536, 4, 393250, 65536, 4, 458786, 65536, 4, 524322, 65536, 4, 589858, 65536, 4, 655394, 65536, 4, 720930, 65536, 4, 786466, 65536, 4, 852002, 65536, 4, 917538, 65536, 4, 983074, 65536, 4, 1048610, 65536, 4, 1114146, 65536, 4, 1179682, 65536, 4, 1245218, 65536, 5, 35, 131072, 3, 65571, 131072, 4, 131107, 131072, 4, 196643, 131072, 4, 262179, 131072, 4, 327715, 131072, 4, 393251, 131072, 4, 458787, 131072, 4, 524323, 131072, 4, 589859, 131072, 4, 655395, 131072, 4, 720931, 131072, 4, 786467, 131072, 4, 852003, 131072, 4, 917539, 131072, 4, 983075, 131072, 4, 1048611, 131072, 4, 1114147, 131072, 4, 1179683, 131072, 4, 1245219, 131072, 5)

[node name="HorseBoss" type="CharacterBody2D" parent="."]
position = Vector2(595, 298)
script = ExtResource("2_iu8um")

[node name="Sprite2D" type="Sprite2D" parent="HorseBoss"]
position = Vector2(-595, -298)

[node name="AnimationHorse" type="AnimatedSprite2D" parent="HorseBoss"]
sprite_frames = SubResource("SpriteFrames_voygt")
animation = &"death"
frame = 2
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HorseBoss"]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_iu8um")

[node name="HitArea" type="Area2D" parent="HorseBoss"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HorseBoss/HitArea"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_cslyu")

[node name="CooldownTimer" type="Timer" parent="HorseBoss"]

[node name="StateTimer" type="Timer" parent="HorseBoss"]

[node name="player" type="CharacterBody2D" parent="." groups=["player"]]
position = Vector2(4.43074, 4.94751)
script = ExtResource("5_cslyu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="player"]
position = Vector2(206.569, 181.052)
sprite_frames = SubResource("SpriteFrames_4a6df")
animation = &"attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
position = Vector2(204.936, 181.798)
shape = SubResource("CircleShape2D_4xov4")

[node name="Player" parent="." instance=ExtResource("9_f54f7")]
position = Vector2(149, 157)
